src/backends/drm/drm_backend.cpp
@@ -212,6 +212,21 @@ DrmGpu *DrmBackend::addGpu(const QString &fileName)
 
 void DrmBackend::addOutput(DrmAbstractOutput *o)
 {
+    const bool allOff = std::all_of(m_outputs.begin(), m_outputs.end(), [](Output *output) {
+        return output->dpmsMode() != Output::DpmsMode::On;
+    });
+    if (allOff && m_recentlyUnpluggedDpmsOffOutputs.contains(o->uuid())) {
+        if (DrmOutput *drmOutput = qobject_cast<DrmOutput *>(o)) {
+            // When the system is in dpms power saving mode, KWin turns on all outputs if the user plugs a new output in
+            // as that's an intentional action and they expect to see the output light up.
+            // Some outputs however temporarily disconnect in some situations, most often shortly after they go into standby.
+            // To not turn on outputs in that case, restore the previous dpms state
+            drmOutput->updateDpmsMode(Output::DpmsMode::Off);
+            drmOutput->pipeline()->setActive(false);
+            drmOutput->renderLoop()->inhibit();
+            m_recentlyUnpluggedDpmsOffOutputs.removeOne(drmOutput->uuid());
+        }
+    }
     m_outputs.append(o);
     Q_EMIT outputAdded(o);
     o->updateEnabled(true);
@@ -219,6 +234,13 @@ void DrmBackend::addOutput(DrmAbstractOutput *o)
 
 void DrmBackend::removeOutput(DrmAbstractOutput *o)
 {
+    if (o->dpmsMode() == Output::DpmsMode::Off) {
+        const QUuid id = o->uuid();
+        m_recentlyUnpluggedDpmsOffOutputs.push_back(id);
+        QTimer::singleShot(1000, this, [this, id]() {
+            m_recentlyUnpluggedDpmsOffOutputs.removeOne(id);
+        });
+    }
     o->updateEnabled(false);
     m_outputs.removeOne(o);
     Q_EMIT outputRemoved(o);
